discussion/kv_engine/155140/155140_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 06:04:17.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 07:05:20.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9572/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9572/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9572/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36525/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36525/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11147/ : FAILURE

Compile error at [2021-06-08T06:28:44.767Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11147/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11295/ : FAILURE

Compile error at [2021-06-08T06:35:40.402Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19150/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8170/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/118/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31213/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10217/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11567/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
